<?xml version="1.0"?>
<package format="3">
  <name>libcreate</name>
  <version>2.0.0</version>
  <description>C++ library for interfacing with iRobot's Create 1 and Create 2</description>

  <maintainer email="jperron@sfu.ca">Jacob Perron</maintainer>
  <maintainer email="yutaka.kondo@youtalk.jp">Yutaka Kondo</maintainer>

  <license>BSD</license>

  <url type="website">http://wiki.ros.org/libcreate</url>
  <url type="repository">https://github.com/AutonomyLab/libcreate</url>
  <url type="bugtracker">https://github.com/AutonomyLab/libcreate/issues</url>

  <author email="jperron@sfu.ca">Jacob Perron</author>

  <buildtool_depend>ament_cmake</buildtool_depend>

  <depend>boost</depend>

  <doc_depend>doxygen</doc_depend>

  <test_depend>gtest</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>
